# OasisTgBot

./: Dockerfile  README.md  ai.py  bot.py  compose.yaml  decorator.py  pyproject.toml  requirements.txt  rofl.yaml
